--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,18 @@
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin-top: 0;
+  margin-bottom: 0;
+}
 ul,
 ol {
   list-style-type: none;
+  margin: 0;
+  padding: 0;
 }
 a {
   text-decoration: none;
@@ -8,11 +20,31 @@ a {
 button {
   cursor: pointer;
 }
+img {
+  display: block;
+}
 
 body {
   font-family: 'Roboto', sans-serif;
   color: #434455;
   background: #fff;
+}
+.container {
+  max-width: 1158px;
+  padding: 0 15px;
+  margin: 0 auto;
+}
+/* ======== Header section styles ========= */
+.header-container {
+  display: flex;
+  align-items: center;
+}
+.header {
+  border-bottom: 1px solid #e7e9fc;
+}
+.header-navigation {
+  display: flex;
+  align-items: center;
 }
 .page-logo {
   font-family: 'Raleway', sans-serif;
@@ -22,9 +54,14 @@ body {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #4d5ae5;
+  margin-right: 76px;
 }
 .second-part-logo {
   color: #2e2f42;
+}
+.navigation-menu-list {
+  display: flex;
+  gap: 40px;
 }
 .navigation-menu-link {
   color: #2e2f42;
@@ -32,6 +69,10 @@ body {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
+  display: block;
+  padding-top: 24px;
+  padding-bottom: 24px;
+  display: block;
 }
 .navigation-menu-link:hover,
 .navigation-menu-link:focus {
@@ -40,45 +81,88 @@ body {
 .navigation-menu-link:active {
   color: #404bbf;
 }
-.address-menu-link {
+.header-address-menu-link {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
 }
-.adress-general {
+.header-adress {
   font-style: normal;
+  margin-left: 332px;
 }
-.address-menu-link:hover,
-.address-menu-link:focus {
+.header-address-menu-list {
+  display: flex;
+  gap: 40px;
+}
+.header-address-menu-link:hover,
+.header-address-menu-link:focus {
   color: #404bbf;
 }
+/* ======== Hero section styles ========= */
+
 .hero {
   background: #2e2f42;
+  padding-top: 188px;
+  padding-bottom: 188px;
 }
 .main-title {
+  max-width: 496px;
+  height: 120px;
   font-weight: 700;
   font-size: 56px;
   line-height: 1.07;
   letter-spacing: 0.02em;
   text-align: center;
   color: #fff;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 48px;
 }
 .order-service-btn {
+  display: block;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.04em;
   color: #fff;
   background: #4d5ae5;
+  border: none;
+  border-radius: 4px;
+  min-width: 169px;
+  height: 56px;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  padding-left: 32px;
+  padding-right: 32px;
+  margin: 0 auto;
 }
+
 .order-service-btn:hover,
 .order-service-btn:focus {
   background: #404bbf;
 }
-.page-footer {
-  background: #2e2f42;
+/* ======== Advantages section styles ========= */
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+.advantages-list {
+  display: flex;
+  gap: 24px;
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+.advantages-list-item {
+  width: calc((100% - 72px) / 4);
 }
 .advantages-list-title {
   font-weight: 500;
@@ -92,8 +176,15 @@ body {
   line-height: 1.5;
   letter-spacing: 0.02em;
 }
+/* ======== Our team section styles ========= */
 .members-team {
   background: #f4f4fd;
+}
+.team-list {
+  display: flex;
+  gap: 24px;
+  padding-bottom: 120px;
+  margin-bottom: 120px;
 }
 .team-title {
   font-weight: 700;
@@ -103,9 +194,27 @@ body {
   text-transform: capitalize;
   text-align: center;
   color: #2e2f42;
+  padding-top: 110px;
+  padding-bottom: 54px;
 }
 .team-list-item {
   background-color: #ffffff;
+  border-radius: 0 0 4px 4px;
+  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
+    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+  width: calc((100% - 72px) / 4);
+}
+.team-list-img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+.team-list-img.tom-ford {
+  border: 1px solid #000;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+}
+.team-list-data {
+  padding: 32px 16px;
 }
 .team-list-title {
   font-weight: 500;
@@ -113,11 +222,27 @@ body {
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
+  text-align: center;
+  margin-bottom: 8px;
 }
 .team-list-text {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
+  text-align: center;
+}
+/* ======== Portfolio section styles ========= */
+.portfolio-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 24px;
+  padding-top: 120px;
+}
+.portfolio-list-item {
+  background: #fff;
+  border: 1px solid #e7e9fc;
+  width: calc((100% - 48px) / 3);
+  margin-bottom: 120px;
 }
 .portfolio-title {
   font-weight: 700;
@@ -128,23 +253,46 @@ body {
   color: #2e2f42;
   text-align: center;
 }
+.portfolio-list-img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+.portfolio-list-data {
+  padding-left: 16px;
+  padding-top: 32px;
+  padding-bottom: 32px;
+}
 .portfolio-list-title {
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
+  margin-bottom: 8px;
 }
 .portfolio-list-text {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
 }
+/* ======== Footer section styles ========= */
+.page-footer {
+  padding-top: 100px;
+  padding-bottom: 100px;
+  padding-left: 156px;
+}
+
+.page-footer {
+  background: #2e2f42;
+}
 .footer-text {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #f4f4fd;
+  max-width: 264px;
+  margin-top: 16px;
 }
 .footer-logo {
   color: #f4f4fd;
