--- a/css/styles.css
+++ b/css/styles.css
@@ -143,6 +143,13 @@ body {
   background: #404bbf;
 }
 /* ======== Advantages section styles ========= */
+.advantages {
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+.advantages-title {
+  margin-bottom: 8px;
+}
 .visually-hidden {
   position: absolute;
   width: 1px;
@@ -158,8 +165,6 @@ body {
 .advantages-list {
   display: flex;
   gap: 24px;
-  padding-top: 120px;
-  padding-bottom: 120px;
 }
 .advantages-list-item {
   width: calc((100% - 72px) / 4);
@@ -170,6 +175,7 @@ body {
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
+  margin-bottom: 8px;
 }
 .advantages-list-text {
   font-size: 16px;
@@ -179,13 +185,18 @@ body {
 /* ======== Our team section styles ========= */
 .members-team {
   background: #f4f4fd;
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+.team-container {
+  padding-top: 32px;
+  padding-bottom: 32px;
 }
 .team-list {
   display: flex;
   gap: 24px;
-  padding-bottom: 120px;
-  margin-bottom: 120px;
 }
+
 .team-title {
   font-weight: 700;
   font-size: 36px;
@@ -194,8 +205,7 @@ body {
   text-transform: capitalize;
   text-align: center;
   color: #2e2f42;
-  padding-top: 110px;
-  padding-bottom: 54px;
+  margin-bottom: 72px;
 }
 .team-list-item {
   background-color: #ffffff;
@@ -232,17 +242,23 @@ body {
   text-align: center;
 }
 /* ======== Portfolio section styles ========= */
+.portfolio-container {
+  border: 1px solid #e7e9fc;
+  padding: 32px 16px;
+}
+.studio-portfolio {
+  padding: 120px 0 120px 0;
+}
 .portfolio-list {
   display: flex;
   flex-wrap: wrap;
-  gap: 24px;
-  padding-top: 120px;
+  column-gap: 24px;
+  row-gap: 48px;
 }
 .portfolio-list-item {
   background: #fff;
   border: 1px solid #e7e9fc;
   width: calc((100% - 48px) / 3);
-  margin-bottom: 120px;
 }
 .portfolio-title {
   font-weight: 700;
@@ -252,6 +268,7 @@ body {
   text-transform: capitalize;
   color: #2e2f42;
   text-align: center;
+  margin-bottom: 72px;
 }
 .portfolio-list-img {
   display: block;
@@ -280,7 +297,6 @@ body {
 .page-footer {
   padding-top: 100px;
   padding-bottom: 100px;
-  padding-left: 156px;
 }
 
 .page-footer {
@@ -292,8 +308,9 @@ body {
   letter-spacing: 0.02em;
   color: #f4f4fd;
   max-width: 264px;
-  margin-top: 16px;
 }
 .footer-logo {
   color: #f4f4fd;
+  display: inline-block;
+  margin-bottom: 16px;
 }
