--- a/css/styles.css
+++ b/css/styles.css
@@ -256,9 +256,10 @@ body {
   row-gap: 48px;
 }
 .portfolio-list-item {
+  width: calc((100% - 48px) / 3);
   background: #fff;
   border: 1px solid #e7e9fc;
-  width: calc((100% - 48px) / 3);
+  
 }
 .portfolio-title {
   font-weight: 700;
@@ -297,20 +298,20 @@ body {
 .page-footer {
   padding-top: 100px;
   padding-bottom: 100px;
-}
-
-.page-footer {
   background: #2e2f42;
+}
+.page-logo.footer {
+  display: inline-block;
+  margin-bottom: 16px;
+}
+.footer-logo {
+  color: #f4f4fd;
 }
 .footer-text {
   font-size: 16px;
-  line-height: 1.5;
+  line-height: 1.5
   letter-spacing: 0.02em;
   color: #f4f4fd;
   max-width: 264px;
 }
-.footer-logo {
-  color: #f4f4fd;
-  display: inline-block;
-  margin-bottom: 16px;
-}
+
