--- a/css/styles.css
+++ b/css/styles.css
@@ -191,6 +191,7 @@ body {
 .team-container {
   padding-top: 32px;
   padding-bottom: 32px;
+}
 
 .team-list {
   display: flex;
@@ -243,8 +244,8 @@ body {
 }
 /* ======== Portfolio section styles ========= */
 .portfolio-container {
- border: 1px solid #e7e9fc;
- padding: 32px 16px;
+  border: 1px solid #e7e9fc;
+  padding: 32px 16px;
 }
 .studio-portfolio {
   padding: 120px 0 120px 0;
@@ -259,7 +260,6 @@ body {
   width: calc((100% - 48px) / 3);
   background: #fff;
   border: 1px solid #e7e9fc;
-  
 }
 .portfolio-title {
   font-weight: 700;
@@ -309,9 +309,8 @@ body {
 }
 .footer-text {
   font-size: 16px;
-  line-height: 1.5
+  line-height: 1.5;
   letter-spacing: 0.02em;
   color: #f4f4fd;
   max-width: 264px;
 }
-
