--- a/css/styles.css
+++ b/css/styles.css
@@ -188,11 +188,6 @@ body {
   padding-top: 120px;
   padding-bottom: 120px;
 }
-/* .team-container {
-  padding-top: 32px;
-  padding-bottom: 32px;
-} */
-
 .team-list {
   display: flex;
   gap: 24px;
@@ -243,12 +238,10 @@ body {
   text-align: center;
 }
 /* ======== Portfolio section styles ========= */
-/* .portfolio-container {
-  border: 1px solid #e7e9fc;
-  padding: 32px 16px;
-} */
+
 .studio-portfolio {
   padding: 120px 0 120px 0;
+  border-top: none;
 }
 .portfolio-list {
   display: flex;
@@ -277,6 +270,7 @@ body {
   height: auto;
 }
 .portfolio-list-data {
+  border-top: none;
   padding: 32px 16px;
   border: 1px solid #e7e9fc;
 }
