--- a/css/styles.css
+++ b/css/styles.css
@@ -73,7 +73,9 @@ body {
   padding-top: 24px;
   padding-bottom: 24px;
   display: block;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .navigation-menu-link:hover,
 .navigation-menu-link:focus {
   color: #404bbf;
@@ -81,31 +83,58 @@ body {
 .navigation-menu-link:active {
   color: #404bbf;
 }
+.studio-link {
+  position: relative;
+  color: #404bbf;
+}
+.studio-link::after {
+  display: block;
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: -1px;
+  border-radius: 2px;
+  width: 100%;
+  height: 4px;
+  background: #404bbf;
+}
+
 .header-address-menu-link {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
-}
-.header-adress {
-  font-style: normal;
-  margin-left: 332px;
-}
-.header-address-menu-list {
-  display: flex;
-  gap: 40px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .header-address-menu-link:hover,
 .header-address-menu-link:focus {
   color: #404bbf;
 }
+.header-adress {
+  font-style: normal;
+  margin-left: auto;
+}
+.header-address-menu-list {
+  display: flex;
+  gap: 40px;
+}
+
 /* ======== Hero section styles ========= */
 
 .hero {
-  background: #2e2f42;
+  max-width: 1440px;
+  margin-right: auto;
+  margin-left: auto;
+  background-color: #2e2f42;
   padding-top: 188px;
   padding-bottom: 188px;
+  background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(../images/hero/bg.jpg);
+  background-size: cover;
 }
 .main-title {
   max-width: 496px;
@@ -169,6 +198,16 @@ body {
 .advantages-list-item {
   width: calc((100% - 72px) / 4);
 }
+.advantages-list-data {
+  border: 1px solid #8e8f99;
+  border-radius: 4px;
+  width: 264px;
+  height: 112px;
+  background: #f4f4fd;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .advantages-list-title {
   font-weight: 500;
   font-size: 20px;
@@ -215,12 +254,10 @@ body {
   max-width: 100%;
   height: auto;
 }
-.team-list-img.tom-ford {
-  border: 1px solid #000;
-  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
-}
+
 .team-list-data {
-  padding: 32px 0;
+  padding-top: 32px;
+  padding-bottom: 8px;
 }
 .team-list-title {
   font-weight: 500;
@@ -237,6 +274,30 @@ body {
   letter-spacing: 0.02em;
   text-align: center;
 }
+.team-list-social-media {
+  padding-bottom: 32px;
+}
+
+.team-social-list {
+  display: flex;
+  gap: 24px;
+  justify-content: space-around;
+}
+.team-social-list-icon-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: #4d5ae5;
+  fill: #f4f4fd;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.team-social-list-icon-wrapper:hover,
+.team-social-list-icon-wrapper:focus {
+  background-color: #404bbf;
+}
 /* ======== Portfolio section styles ========= */
 
 .studio-portfolio {
@@ -252,7 +313,15 @@ body {
 .portfolio-list-item {
   width: calc((100% - 48px) / 3);
   background: #fff;
-  border: 1px solid #e7e9fc;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-list-item:hover {
+  box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+}
+
+.portfolio-list-item:hover .portfolio-overlay-text {
+  transform: translateY(0);
 }
 .portfolio-title {
   font-weight: 700;
@@ -264,11 +333,34 @@ body {
   text-align: center;
   margin-bottom: 72px;
 }
+.portfolio-img-overlay {
+  position: relative;
+  overflow: hidden;
+}
 .portfolio-list-img {
   display: block;
   max-width: 100%;
   height: auto;
 }
+.portfolio-overlay-text {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: #4d5ae5;
+  color: #f4f4fd;
+  width: 100%;
+  height: 100%;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  overflow: auto;
+  padding-top: 40px;
+  padding-left: 32px;
+  padding-right: 32px;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .portfolio-list-data {
   padding: 32px 16px;
   border: 1px solid #e7e9fc;
@@ -289,9 +381,15 @@ body {
 }
 /* ======== Footer section styles ========= */
 .page-footer {
+  display: flex;
   padding-top: 100px;
   padding-bottom: 100px;
   background: #2e2f42;
+}
+.footer-container {
+  display: flex;
+  width: 100%;
+  gap: 120px;
 }
 .page-logo.footer {
   display: inline-block;
@@ -306,4 +404,31 @@ body {
   letter-spacing: 0.02em;
   color: #f4f4fd;
   max-width: 264px;
+}
+.footer-social-list {
+  display: flex;
+  gap: 16px;
+}
+.footer-social-title {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #fff;
+  margin-bottom: 16px;
+}
+.footer-social-list-icon-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: #4d5ae5;
+  fill: #f4f4fd;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.footer-social-list-icon-wrapper:hover,
+.footer-social-list-icon-wrapper:focus {
+  background-color: #31d0aa;
 }
