--- a/css/styles.css
+++ b/css/styles.css
@@ -137,6 +137,8 @@ body {
     ),
     url(../images/hero/bg.jpg);
   background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 .main-title {
   max-width: 496px;
@@ -167,13 +169,15 @@ body {
   padding-left: 32px;
   padding-right: 32px;
   margin: 0 auto;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .order-service-btn:hover,
 .order-service-btn:focus {
-  background: #404bbf;
+  background-color: #404bbf;
 }
 /* ======== Advantages section styles ========= */
+
 .advantages {
   padding-top: 120px;
   padding-bottom: 120px;
@@ -209,6 +213,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-bottom: 8px;
 }
 .advantages-list-title {
   font-weight: 500;
@@ -319,7 +324,8 @@ body {
 }
 
 .portfolio-list-item:hover {
-  box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .portfolio-list-item:hover .portfolio-overlay-text {
@@ -356,9 +362,7 @@ body {
   line-height: 1.5;
   letter-spacing: 0.02em;
   overflow: auto;
-  padding-top: 40px;
-  padding-left: 32px;
-  padding-right: 32px;
+  padding: 40px 32px;
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
