--- a/css/styles.css
+++ b/css/styles.css
@@ -262,10 +262,10 @@ body {
   height: auto;
 }
 
-.team-list-data {
+/* .team-list-data {
   padding-top: 32px;
   padding-bottom: 8px;
-}
+} */
 .team-list-title {
   font-weight: 500;
   font-size: 20px;
@@ -282,7 +282,7 @@ body {
   text-align: center;
 }
 .team-list-social-media {
-  padding-bottom: 32px;
+  padding: 32px 0;
 }
 
 .team-social-list {
