--- a/css/styles.css
+++ b/css/styles.css
@@ -299,10 +299,11 @@ body {
   fill: #f4f4fd;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.team-social-list-linkr:hover,
+.team-social-list-link:hover,
 .team-social-list-link:focus {
   background-color: #404bbf;
 }
+
 /* ======== Portfolio section styles ========= */
 
 .studio-portfolio {
@@ -385,20 +386,22 @@ body {
 }
 /* ======== Footer section styles ========= */
 .page-footer {
-  display: flex;
-  padding-top: 100px;
-  padding-bottom: 100px;
+  padding: 100px 0;
   background: #2e2f42;
 }
 .footer-container {
   display: flex;
-  width: 100%;
-  gap: 120px;
+  align-items: baseline;
 }
+.first-part-footer {
+  margin-right: 120px;
+}
+
 .page-logo.footer {
   display: inline-block;
   margin-bottom: 16px;
 }
+
 .footer-logo {
   color: #f4f4fd;
 }
@@ -409,11 +412,13 @@ body {
   color: #f4f4fd;
   max-width: 264px;
 }
+
 .footer-social-list {
   display: flex;
   gap: 16px;
+  padding-top: 16px;
 }
-.footer-social-title {
+.footer-social-text {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
@@ -421,7 +426,9 @@ body {
   color: #fff;
   margin-bottom: 16px;
 }
-.footer-social-list-icon-wrapper {
+.footer-social-list-link {
+  width: 100%;
+  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -429,10 +436,12 @@ body {
   height: 40px;
   border-radius: 50%;
   background-color: #4d5ae5;
-  fill: #f4f4fd;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.footer-social-list-icon-wrapper:hover,
-.footer-social-list-icon-wrapper:focus {
+.footer-social-list-link:hover,
+.footer-social-list-link:focus {
   background-color: #31d0aa;
+}
+.footer-social-list-icon {
+  fill: #f4f4fd;
 }
