--- a/css/styles.css
+++ b/css/styles.css
@@ -417,7 +417,9 @@ body {
   display: flex;
   gap: 16px;
 }
-
+.footer-social-media {
+  margin-right: 80px;
+}
 .footer-social-text {
   font-weight: 500;
   font-size: 16px;
@@ -445,10 +447,12 @@ body {
 .footer-social-list-icon {
   fill: #f4f4fd;
 }
-.subscribe-form {
+.subscribe {
   display: flex;
-  gap: 24px;
+  justify-content: center;
+  flex-direction: column;
 }
+
 .subscribe-text {
   font-weight: 500;
   font-size: 16px;
@@ -457,8 +461,39 @@ body {
   color: #fff;
   margin-bottom: 16px;
 }
+.subscribe-form {
+  display: flex;
+  gap: 24px;
+}
+
+.footer-form-label {
+  display: flex;
+}
+.footer-form-input {
+  border: 1px solid #fff;
+  border-radius: 4px;
+  width: 264px;
+  height: 40px;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  background-color: transparent;
+  font-size: 12px;
+  line-height: 2;
+  letter-spacing: 0.04em;
+  color: #fff;
+  padding-left: 16px;
+}
+.footer-form-label::placeholder {
+  color: #fff;
+}
+/* .footer-form-label:focus {
+  outline: none;
+} */
+
 .subscribe-form-submit-btn {
-  display: block;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
   border: none;
   font-weight: 500;
   font-size: 16px;
@@ -468,9 +503,19 @@ body {
   color: #fff;
   border-radius: 4px;
   padding: 8px 24px;
-  width: 165px;
+  min-width: 165px;
   height: 40px;
   background: #4d5ae5;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.subscribe-form-submit-btn:focus,
+.subscribe-form-submit-btn:hover {
+  background-color: #404bbf;
+}
+.subscribe-form-submit-icon {
+  fill: #fff;
+  margin-left: 16px;
 }
 /* ======== Backdrop styles ========= */
 
@@ -580,6 +625,9 @@ body {
 .feedback-form-input:focus + .feedback-form-field-icon {
   fill: #4d5ae5;
 }
+.feedback-form-textarea-wrapper {
+  margin-bottom: 16px;
+}
 .feedback-form-massage {
   font-size: 12px;
   line-height: 1.17;
@@ -658,4 +706,9 @@ body {
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
   background: #4d5ae5;
   margin: 0 auto;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.feedback-form-submit-btn:hover,
+.feedback-form-submit-btn:focus {
+  background-color: #404bbf;
 }
