--- a/css/styles.css
+++ b/css/styles.css
@@ -526,7 +526,7 @@ body {
   z-index: 999999;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(46, 47, 66, 0.4);
   opacity: 0;
   visibility: hidden;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
@@ -552,13 +552,17 @@ body {
   background-color: #fcfcfc;
   box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12),
     0 2px 1px 0 rgba(0, 0, 0, 0.2);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-close-btn {
   position: absolute;
   right: 24px;
   top: 24px;
-  border-radius: 100%;
-  border-width: 1px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  border: 1px solid rgba(0, 0, 0, 0.1);
   border-color: rgba(0, 0, 0, 0.1);
   background-color: #e7e9fc;
   width: 24px;
@@ -566,11 +570,15 @@ body {
   padding: 0;
   line-height: 0;
   fill: #2e2f42;
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  fill: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-close-btn:focus,
 .modal-close-btn:hover {
-  fill: #ffffff;
+  background-color: #404bbf;
+  border: none;
+  fill: #fff;
 }
 
 /* ======== Feedback form styles ========= */
@@ -608,6 +616,8 @@ body {
   border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 4px;
   padding-left: 38px;
+  background-color: transparent;
+  outline: transparent;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .feedback-form-input:focus {
@@ -632,11 +642,13 @@ body {
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.04em;
-
   border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 4px;
   width: 100%;
   height: 120px;
+  outline: transparent;
+  background-color: transparent;
+  color: rgba(46, 47, 66, 0.4);
   resize: none;
   padding: 8px 16px;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -669,6 +681,9 @@ body {
   cursor: pointer;
   fill: transparent;
   margin-right: 8px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .feedback-form-privacy-checkbox:checked
@@ -676,7 +691,7 @@ body {
   .feedback-form-own-checkbox {
   background-color: #404bbf;
   fill: #f4f4fd;
-  border-color: 1px solid #404bbf;
+  border: none;
 }
 
 .privacy-policy-link {
@@ -701,7 +716,7 @@ body {
   color: #fff;
   border-radius: 4px;
   padding: 16px 32px;
-  width: 169px;
+  min-width: 169px;
   height: 56px;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
   background: #4d5ae5;
