--- a/css/styles.css
+++ b/css/styles.css
@@ -580,6 +580,16 @@ body {
   border: none;
   fill: #fff;
 }
+.modal-close-btn-icon {
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-close-btn:hover
+  > .modal-close-btn-icon
+  .modal-close-btn:focus
+  > .modal-close-btn-icon {
+  fill: #fff;
+}
 
 /* ======== Feedback form styles ========= */
 .feedback-form-description {
