--- a/css/styles.css
+++ b/css/styles.css
@@ -138,7 +138,6 @@ body {
   }
   .studio-link {
     position: relative;
-    color: #404bbf;
   }
   .studio-link::after {
     content: '';
@@ -151,9 +150,7 @@ body {
     border-radius: 2px;
     background: #404bbf;
   }
-  .tel-link {
-    color: #2e2f42;
-  }
+
   .header-address-menu-link {
     color: #434455;
     font-weight: 400;
@@ -162,6 +159,7 @@ body {
     letter-spacing: 0.04em;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
+
   .header-adress {
     margin-left: auto;
     font-style: normal;
@@ -175,6 +173,9 @@ body {
     display: flex;
     flex-direction: column;
     gap: 12px;
+  }
+  .tel-link {
+    color: #2e2f42;
   }
 }
 @media only screen and (min-width: 1158px) {
@@ -317,6 +318,8 @@ body {
   }
   .hero {
     max-width: 1440px;
+    padding-top: 188px;
+    padding-bottom: 188px;
     background-image: linear-gradient(
         rgba(46, 47, 66, 0.7),
         rgba(46, 47, 66, 0.7)
@@ -1040,7 +1043,13 @@ body {
     visibility: hidden;
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
       visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transform: translateX(100%);
+    transition: transform 250ms ease-in-out;
   }
+  .mobile-menu.is-open {
+    transform: translateX(0);
+  }
+
   .mobile-menu.is-open {
     opacity: 1;
     visibility: visible;
@@ -1058,6 +1067,9 @@ body {
     right: 24px;
     width: 24px;
     height: 24px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     border: 1px solid #e7e9fc;
     border-radius: 100%;
     background-color: transparent;
@@ -1093,10 +1105,10 @@ body {
   .contact-info {
     margin-top: auto;
   }
-  .studio-link,
-  .tel-link {
+  .studio-link {
     color: #404bbf;
   }
+
   .mobile-menu-adress-link {
     color: #434455;
     font-weight: 500;
@@ -1107,6 +1119,9 @@ body {
   .mobile-menu-adress-link:hover,
   .mobile-menu-adress-link:focus {
     color: #4d5ae5;
+  }
+  .tel-link {
+    color: #404bbf;
   }
 
   .mobile-menu-adress-list {
