--- a/css/desktop-styles.css
+++ b/css/desktop-styles.css
@@ -29,6 +29,7 @@ body {
   font-family: 'Roboto', sans-serif;
   color: #434455;
   background: #fff;
+  overflow-y: scroll;
 }
 .container {
   max-width: 1158px;
