--- a/css/styles.css
+++ b/css/styles.css
@@ -32,6 +32,7 @@ body {
   background: #fff;
   color: #434455;
   font-family: 'Roboto', sans-serif;
+  overflow-y: scroll;
 }
 
 .visually-hidden {
