--- a/css/desktop-styles.css
+++ b/css/desktop-styles.css
@@ -564,7 +564,7 @@ body {
   height: 24px;
   padding: 0;
   line-height: 0;
-  fill: #2e2f42;
+  /* fill: #2e2f42; */
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1);
   fill: 250ms cubic-bezier(0.4, 0, 0.2, 1);
