--- a/css/styles.css
+++ b/css/styles.css
@@ -841,7 +841,7 @@ body {
   border-radius: 50%;
   background-color: #e7e9fc;
   line-height: 0;
-  fill: #2e2f42;
+  /* fill: #2e2f42; */
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1),
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -1075,7 +1075,7 @@ body {
     border-radius: 50%;
     background-color: transparent;
     line-height: 0;
-    fill: #2e2f42;
+    /* fill: #2e2f42; */
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
 
