--- a/css/styles.css
+++ b/css/styles.css
@@ -841,14 +841,13 @@ body {
   border-radius: 50%;
   background-color: #e7e9fc;
   line-height: 0;
-  /* fill: #2e2f42; */
+  fill: #2e2f42;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1),
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-close-btn:focus,
 .modal-close-btn:hover {
-  border: none;
   background-color: #404bbf;
   fill: #fff;
 }
@@ -1071,13 +1070,29 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 0;
     border: 1px solid #e7e9fc;
     border-radius: 50%;
     background-color: transparent;
     line-height: 0;
-    /* fill: #2e2f42; */
+    fill: #2e2f42;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 24px;
+  height: 24px;
+  padding: 0;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-color: rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  background-color: #e7e9fc;
+  line-height: 0;
+  fill: #2e2f42;
 
   .mobile-nav-menu-list {
     display: flex;
